--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,11 @@ repositories {
 
 dependencies {
     implementation "com.github.Anuken.Mindustry:core:$pMindustryVersion"
+
+    compileOnly "com.github.Anuken.Arc:arc-core:$pMindustryVersion"
+    compileOnly "com.github.Anuken.Mindustry:core:$pMindustryVersion"
+    compileOnly files('libs/annotations-122.jar')
+
 }
 
 jar {
