--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -10,6 +10,16 @@ block.shar-multi-drill.details = A work that has been repeatedly added and delet
 block.shar-shield-wall.name = Shield Wall
 block.shar-shield-wall.description = A wall with a shield to protect the hp. Affected by the shield regen field.
 block.shar-shield-wall.details = Make it simple before release.
+block.shar-multi-crafterator.name = Multi Crafterator
+block.shar-multi-crafterator.description =
+block.shar-multi-crafterator.detail =
+block.shar-mats-multi-i.name = Aggregate
+block.shar-mats-multi-i.description = A few small turrets mounted on a larger turret.
+block.shar-mats-multi-i.details = This is cursed on so many levels.
 bar.attribute = {1} Attribute: + {0}%
 bar.drillspeeditem = {1} Speed: {0}/{2}s
+stat.prog-mats.base-t = Base Turret
+stat.prog-mats.mini-t = Mounted Turrets
+stat.prog-mats.sentry-lifetime = Lifetime
+stat.prog-mats.ammo-shot = Shots
 bar.shield = Shield
