added mount ammo ui, fix base turret and something more, clean up

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -13,9 +13,9 @@ block.shar-shield-wall.details = Make it simple before release.
 block.shar-multi-crafterator.name = Multi Crafterator
 block.shar-multi-crafterator.description =
 block.shar-multi-crafterator.detail =
-block.shar-mats-multi-i.name = Aggregate
-block.shar-mats-multi-i.description = A few small turrets mounted on a larger turret.
-block.shar-mats-multi-i.details = This is cursed on so many levels.
+block.shar-multi-i.name = Aggregate
+block.shar-multi-i.description = A few small turrets mounted on a larger turret.
+block.shar-multi-i.details = This is cursed on so many levels.
 bar.attribute = {1} Attribute: + {0}%
 bar.drillspeeditem = {1} Speed: {0}/{2}s
 stat.prog-mats.base-t = Base Turret
