added Stats, clean up, fix something more and more

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -11,15 +11,17 @@ block.shar-shield-wall.name = Shield Wall
 block.shar-shield-wall.description = A wall with a shield to protect the hp. Affected by the shield regen field.
 block.shar-shield-wall.details = Make it simple before release.
 block.shar-multi-crafterator.name = Multi Crafterator
-block.shar-multi-crafterator.description =
-block.shar-multi-crafterator.detail =
+block.shar-multi-crafterator.description = The choose-able recipes crafter-generator block.
+block.shar-multi-crafterator.detail = the multi craft + generator from multi lib by younggam.
 block.shar-multi-i.name = Aggregate
 block.shar-multi-i.description = A few small turrets mounted on a larger turret.
-block.shar-multi-i.details = This is cursed on so many levels.
+block.shar-multi-i.details = sprite and mounts from PM
 bar.attribute = {1} Attribute: + {0}%
 bar.drillspeeditem = {1} Speed: {0}/{2}s
-stat.prog-mats.base-t = Base Turret
-stat.prog-mats.mini-t = Mounted Turrets
-stat.prog-mats.sentry-lifetime = Lifetime
-stat.prog-mats.ammo-shot = Shots
 bar.shield = Shield
+stat.shar.base-t = Base Turret
+stat.shar.mini-t = Mounted Turrets
+stat.shar.ammo-shot = Ammo/shot
+stat.shar.chargeTime = chargeTime
+stat.shar.power = Power
+stat.shar.seconds = seconds
