--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -9,13 +9,16 @@ block.shar-multi-drill.description = A drill that lights up all the minerals dri
 block.shar-multi-drill.details = A work that has been repeatedly added and deleted with many help, ideas, and functions. Helpers: mal and sk and qmel.
 block.shar-shield-wall.name = Shield Wall
 block.shar-shield-wall.description = A wall with a shield to protect the hp. Affected by the shield regen field.
-block.shar-shield-wall.details = Make it simple before release.
+block.shar-shield-wall.details = mixed with zerg lava.
 block.shar-multi-crafterator.name = Multi Crafterator
 block.shar-multi-crafterator.description = The choose-able recipes crafter-generator block.
 block.shar-multi-crafterator.detail = the multi craft + generator from multi lib by younggam.
 block.shar-multi-i.name = Aggregate
 block.shar-multi-i.description = A few small turrets mounted on a larger turret.
 block.shar-multi-i.details = sprite and mounts from PM
+block.shar-conductron.name = Conductron
+block.shar-conductron.description = The second multi turret. shots laser, lightning, accelerator.
+block.shar-conductron.details = sprite from mal
 bar.attribute = {1} Attribute: + {0}%
 bar.drillspeeditem = {1} Speed: {0}/{2}s
 bar.shield = Shield
