tractor go brrrrr

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -28,3 +28,4 @@ stat.shar.ammo-shot = Ammo/shot
 stat.shar.chargeTime = chargeTime
 stat.shar.power = Power
 stat.shar.seconds = seconds
+stat.shar.damage = {0} /sec
