--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -29,3 +29,4 @@ stat.shar.chargeTime = chargeTime
 stat.shar.power = Power
 stat.shar.seconds = seconds
 stat.shar.damage = {0} /sec
+stat.shar.range = {0} blocks
