main bullet is op

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -8,17 +8,25 @@ block.shar-multi-drill.name = Multi Drill
 block.shar-multi-drill.description = A drill that lights up all the minerals drill can drill at a certain period of time.
 block.shar-multi-drill.details = A work that has been repeatedly added and deleted with many help, ideas, and functions. Helpers: mal and sk and qmel.
 block.shar-shield-wall.name = Shield Wall
-block.shar-shield-wall.description = A wall with a shield to protect the hp. Affected by the shield regen field.
+block.shar-shield-wall.description = A wall with a shield to protect the hp. regen shield after 2 seconds until not damaged.
 block.shar-shield-wall.details = mixed with zerg lava.
 block.shar-multi-crafterator.name = Multi Crafterator
 block.shar-multi-crafterator.description = The choose-able recipes crafter-generator block.
 block.shar-multi-crafterator.detail = the multi craft + generator from multi lib by younggam.
+
 block.shar-multi-i.name = Aggregate
 block.shar-multi-i.description = A few small turrets mounted on a larger turret.
-block.shar-multi-i.details = sprite and mounts from PM
+block.shar-multi-i.details = content from meep, PM!
 block.shar-conductron.name = Conductron
 block.shar-conductron.description = The second multi turret. shots laser, lightning, accelerator.
-block.shar-conductron.details = sprite from mal
+block.shar-conductron.details = sprite from mal!
+block.shar-technicus.name = Technicus
+block.shar-technicus.description = The supporter turret. shoots tractor/point defense/repair laser.
+block.shar-technicus.details = you cannot shoot by controlling lol
+block.shar-clinicus.name = Clinicus
+block.shar-clinicus.description = The healer turret. shoots burst heal beam & repair laser.
+block.shar-clinicus.details = sprite from MasterNo2!
+
 bar.attribute = {1} Attribute: + {0}%
 bar.drillspeeditem = {1} Speed: {0}/{2}s
 bar.shield = Shield
