update T2 healer turret

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -19,13 +19,16 @@ block.shar-multi-i.description = A few small turrets mounted on a larger turret.
 block.shar-multi-i.details = content from meep, PM!
 block.shar-conductron.name = Conductron
 block.shar-conductron.description = The second multi turret. shots laser, lightning, accelerator.
-block.shar-conductron.details = sprite from mal!
+block.shar-conductron.details = sprite by mal!
 block.shar-technicus.name = Technicus
 block.shar-technicus.description = The supporter turret. shoots tractor/point defense/repair laser.
 block.shar-technicus.details = you cannot shoot by controlling lol
 block.shar-clinicus.name = Clinicus
-block.shar-clinicus.description = The healer turret. shoots burst heal beam & repair laser.
-block.shar-clinicus.details = sprite from MasterNo2!
+block.shar-clinicus.description = The repair turret. shoots burst heal beam & repair laser + some small support construct.
+block.shar-clinicus.details = sprite by MasterNo2, bullet sprite by ssim!
+block.shar-asclepius.name = Asclepius
+block.shar-asclepius.description = The T2 repair turret. shoots more powerful burst heal beam & shoots more burst heal beam, missile and more bigger suppert construct.
+block.shar-asclepius.details =
 
 bar.attribute = {1} Attribute: + {0}%
 bar.drillspeeditem = {1} Speed: {0}/{2}s
