--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -20,9 +20,9 @@ block.shar-multi-i.details = content from meep, PM!
 block.shar-conductron.name = Conductron
 block.shar-conductron.description = The second multi turret. shots laser, lightning, accelerator.
 block.shar-conductron.details = sprite by mal!
-block.shar-technicus.name = Technicus
-block.shar-technicus.description = The supporter turret. shoots tractor/point defense/repair laser.
-block.shar-technicus.details = you cannot shoot by controlling lol
+block.shar-trinity.name = Technicus
+block.shar-trinity.description = The supporter turret. shoots tractor/point defense/repair laser.
+block.shar-trinity.details = you cannot shoot by controlling lol
 block.shar-clinicus.name = Clinicus
 block.shar-clinicus.description = The repair turret. shoots burst heal beam & repair laser + some small support construct.
 block.shar-clinicus.details = sprite by MasterNo2, bullet sprite by ssim!
