added armed core

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -28,7 +28,11 @@ block.shar-clinicus.description = The repair turret. shoots burst heal beam & re
 block.shar-clinicus.details = sprite by MasterNo2, bullet sprite by ssim!
 block.shar-asclepius.name = Asclepius
 block.shar-asclepius.description = The T2 repair turret. shoots more powerful burst heal beam & shoots more burst heal beam, missile and more bigger suppert construct.
-block.shar-asclepius.details =
+block.shar-asclepius.details = sprite by MasterNo2, bullet sprite by ssim!
+
+block.shar-armedNucleus.name = Armed Nucleus
+block.shar-armedNucleus.description = the Nucleus that has 4 hails and 4 laser turret. need ammo input.
+block.shar-armedNucleus.details = no more flare rush
 
 bar.attribute = {1} Attribute: + {0}%
 bar.drillspeeditem = {1} Speed: {0}/{2}s
