--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -31,8 +31,11 @@ block.shar-asclepius.description = The T2 repair turret. shoots more powerful bu
 block.shar-asclepius.details = sprite by MasterNo2, bullet sprite by ssim!
 
 block.shar-armedNucleus.name = Armed Nucleus
-block.shar-armedNucleus.description = the Nucleus that has 4 hails and 4 laser turret. need ammo input.
+block.shar-armedNucleus.description = the Nucleus core that has 4 hails and 4 laser turret. need power and ammo input. \n [red]you need smaller core[]
 block.shar-armedNucleus.details = no more flare rush
+block.shar-armedFoundation.name = Armed Foundation
+block.shar-armedFoundation.description = the Foundation that has 1 repair laser and 4 repair laser bolt. need power input. \n [red]you need smaller core[]
+block.shar-armedFoundation.details = heal go brr
 
 bar.attribute = {1} Attribute: + {0}%
 bar.drillspeeditem = {1} Speed: {0}/{2}s
@@ -45,3 +48,4 @@ stat.shar.power = Power
 stat.shar.seconds = seconds
 stat.shar.damage = {0} /sec
 stat.shar.range = {0} blocks
+stat.shar.targetsBullet = Targets Bullet
