--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -20,7 +20,7 @@ block.shar-multi-i.details = content from meep, PM!
 block.shar-conductron.name = Conductron
 block.shar-conductron.description = The second multi turret. shots laser, lightning, accelerator.
 block.shar-conductron.details = sprite by mal!
-block.shar-trinity.name = Technicus
+block.shar-trinity.name = Trinity
 block.shar-trinity.description = The supporter turret. shoots tractor/point defense/repair laser.
 block.shar-trinity.details = you cannot shoot by controlling lol
 block.shar-clinicus.name = Clinicus
