added reload & skill bar clean up minor bugfix

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -49,3 +49,5 @@ stat.shar.seconds = seconds
 stat.shar.damage = {0} /sec
 stat.shar.range = {0} blocks
 stat.shar.targetsBullet = Targets Bullet
+stat.shar-reload = reload: 
+stat.shar-skillReload = skill Count: 
