Shar learn English please
Also learn to gitignore please

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,40 +1,40 @@
 block.shar-balkan.name = Balkan
-block.shar-balkan.description = An experimental prototype turret for firing various bullets.
-block.shar-balkan.details = There's only one left. yet
+block.shar-balkan.description = An experimental prototype turret for firing various bullets. Has skills the trigger every few shots.
+block.shar-balkan.details = There's only one left. For now.
 block.shar-adapt-drill.name = Adapt Drill
 block.shar-adapt-drill.description = Attribute selective drill that boosts efficiency with various Attribute types.
 block.shar-adapt-drill.details = The production time is relatively short, so the quality is lower than other contents.
 block.shar-multi-drill.name = Multi Drill
-block.shar-multi-drill.description = A drill that lights up all the minerals drill can drill at a certain period of time.
+block.shar-multi-drill.description = A drill than mines all materials under it at once.
 block.shar-multi-drill.details = A work that has been repeatedly added and deleted with many help, ideas, and functions. Helpers: mal and sk and qmel.
 block.shar-shield-wall.name = Shield Wall
-block.shar-shield-wall.description = A wall with a shield to protect the hp. regen shield after 2 seconds until not damaged.
-block.shar-shield-wall.details = mixed with zerg lava.
+block.shar-shield-wall.description = A wall with a shield that begins regenerating after not taking damage in a short period of time.
+block.shar-shield-wall.details = Mixed with zerg lava.
 block.shar-multi-crafterator.name = Multi Crafterator
 block.shar-multi-crafterator.description = The choose-able recipes crafter-generator block.
-block.shar-multi-crafterator.detail = the multi craft + generator from multi lib by younggam.
+block.shar-multi-crafterator.details = the multi craft + generator from multi lib by younggam.
 
 block.shar-multi-i.name = Aggregate
 block.shar-multi-i.description = A few small turrets mounted on a larger turret.
-block.shar-multi-i.details = content from meep, PM!
+block.shar-multi-i.details = Content from meep, PM!
 block.shar-conductron.name = Conductron
-block.shar-conductron.description = The second multi turret. shots laser, lightning, accelerator.
+block.shar-conductron.description = A multi turret. Shoots lasers, lightning, and accerating bullets.
 block.shar-conductron.details = sprite by mal!
 block.shar-trinity.name = Trinity
-block.shar-trinity.description = The supporter turret. shoots tractor/point defense/repair laser.
+block.shar-trinity.description = A supportive multi turret. Has a tractor beam, point defense laser, repair point, and mass driver.
 block.shar-trinity.details = you cannot shoot by controlling lol
 block.shar-clinicus.name = Clinicus
-block.shar-clinicus.description = The repair turret. shoots burst heal beam & repair laser + some small support construct.
+block.shar-clinicus.description = A repair multi turret. Shoots burst laser bolts, support bullets, and has a repair point.
 block.shar-clinicus.details = sprite by MasterNo2, bullet sprite by ssim!
 block.shar-asclepius.name = Asclepius
-block.shar-asclepius.description = The T2 repair turret. shoots more powerful burst heal beam & shoots more burst heal beam, missile and more bigger suppert construct.
+block.shar-asclepius.description = A stronger repair multi turret. Shoots burst laser bolts, heal artillery, support bullets, and has a repair point.. Has skills the trigger every few shots.
 block.shar-asclepius.details = sprite by MasterNo2, bullet sprite by ssim!
 
 block.shar-armedNucleus.name = Armed Nucleus
-block.shar-armedNucleus.description = the Nucleus core that has 4 hails and 4 laser turret. need power and ammo input. \n [red]you need smaller core[]
+block.shar-armedNucleus.description = A Core Nuclues armed with 4 hails and 4 laser turrets. Needs ammo and power input to fire.\n[red]Requires placement on a smaller core.[]
 block.shar-armedNucleus.details = no more flare rush
 block.shar-armedFoundation.name = Armed Foundation
-block.shar-armedFoundation.description = the Foundation that has 1 repair laser and 4 repair laser bolt. need power input. \n [red]you need smaller core[]
+block.shar-armedFoundation.description = A Core Foundation armed with 4 laser bolt turrets and a repair point. Needs power input to fire.\n[red]Requires placement on a smaller core.[]
 block.shar-armedFoundation.details = heal go brr
 
 bar.attribute = {1} Attribute: + {0}%
