--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 block.shar-balkan.name = Balkan
-block.shar-balkan.description = An experimental prototype turret for firing various bullets. Has skills the trigger every few shots.
+block.shar-balkan.description = An experimental prototype turret for firing various bullets. Has skills that trigger every few shots.
 block.shar-balkan.details = There's only one left. For now.
 block.shar-adapt-drill.name = Adapt Drill
 block.shar-adapt-drill.description = Attribute selective drill that boosts efficiency with various Attribute types.
