--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
 
     compileOnly "com.github.Anuken.Arc:arc-core:$pMindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$pMindustryVersion"
-    compileOnly files('libs/annotations-122.jar')
+    compileOnly "com.github.Anuken.Mindustry:annotations:$pMindustryVersion"
+    annotationProcessor "com.github.Anuken.Mindustry:annotations:$pMindustryVersion"
 
 }
 
