added skill bar, removed annotation

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -37,9 +37,6 @@ block.shar-armedFoundation.name = Armed Foundation
 block.shar-armedFoundation.description = A Core Foundation armed with 4 laser bolt turrets and a repair point. Needs power input to fire.\n[red]Requires placement on a smaller core.[]
 block.shar-armedFoundation.details = heal go brr
 
-bar.attribute = {1} Attribute: + {0}%
-bar.drillspeeditem = {1} Speed: {0}/{2}s
-bar.shield = Shield
 stat.shar.base-t = Base Turret
 stat.shar.mini-t = Mounted Turrets
 stat.shar.ammo-shot = Ammo/shot
@@ -49,5 +46,10 @@ stat.shar.seconds = seconds
 stat.shar.damage = {0} /sec
 stat.shar.range = {0} blocks
 stat.shar.targetsBullet = Targets Bullet
-stat.shar-reload = Reload: 
-stat.shar-skillReload = Skill Count: 
+
+bar.attribute = {1} Attribute: + {0}%
+bar.drillspeeditem = {1} Speed: {0}/{2}s
+bar.shield = Shield
+bar.shar-reload = Reload: {0}%
+bar.shar-charge = Charge: {0}%
+bar.shar-skillReload = Skill Count: 
