added new status effect into balkan skill

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -37,6 +37,8 @@ block.shar-armedFoundation.name = Armed Foundation
 block.shar-armedFoundation.description = A Core Foundation armed with 4 laser bolt turrets and a repair point. Needs power input to fire.\n[red]Requires placement on a smaller core.[]
 block.shar-armedFoundation.details = heal go brr
 
+status.shar-over-freezing.name = Over Freezing
+
 stat.shar.base-t = Base Turret
 stat.shar.mini-t = Mounted Turrets
 stat.shar.ammo-shot = Ammo/shot
