--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -48,6 +48,19 @@ stat.shar.seconds = seconds
 stat.shar.damage = {0} /sec
 stat.shar.range = {0} blocks
 stat.shar.targetsBullet = Targets Bullet
+stat.shar.skillreload = [lightgray]Skill Rate:[] {0} 
+stat.shar.burstshoot-name = Burst Shoot
+stat.shar.burstshoot-description = burst accel bullets randomly
+stat.shar.overfreezing-name = Over Freezing Field
+stat.shar.overfreezing-description = deploy over freezing field
+stat.shar.burstamount = [lightgray]Bullet Amount:[] {0}
+stat.shar.fieldstatus = [lightgray]Field Status:[] {0}
+stat.shar.shieldreceive-name = Shield Receive Field
+stat.shar.shieldreceive-description = Receive force shield to near units, [red]doesn't be saved in save file[].\nforce shield will works as an ability.
+stat.shar.fireforce-name = Force Construction
+stat.shar.fireforce-description = fire construction that has force shield, slow regenerate.\ncan destroyed by segment.
+stat.shar.fireassault-name = Assault Construction
+stat.shar.fireassault-description = fire construction that fire incendiary bullet,rotates 360 degrees and fires everywhere.\ncan destroyed by segment.
 
 bar.attribute = {1} Attribute: + {0}%
 bar.drillspeeditem = {1} Speed: {0}/{2}s
