--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,6 @@
 block.shar-balkan.name = Balkan
 block.shar-balkan.description = An experimental prototype turret for firing various bullets. Has skills that trigger every few shots.
-block.shar-balkan.details = There's only one left. For now.
+block.shar-balkan.details =
 block.shar-adapt-drill.name = Adapt Drill
 block.shar-adapt-drill.description = Attribute selective drill that boosts efficiency with various Attribute types.
 block.shar-adapt-drill.details = The production time is relatively short, so the quality is lower than other contents.
@@ -54,13 +54,13 @@ stat.shar.burstshoot-description = burst accel bullets randomly
 stat.shar.overfreezing-name = Over Freezing Field
 stat.shar.overfreezing-description = deploy over freezing field
 stat.shar.burstamount = [lightgray]Bullet Amount:[] {0}
-stat.shar.fieldstatus = [lightgray]Field Status:[] {0}
+stat.shar.fieldstatus = [lightgray]Field Status:[]
 stat.shar.shieldreceive-name = Shield Receive Field
-stat.shar.shieldreceive-description = Receive force shield to near units, [red]doesn't be saved in save file[].\nforce shield will works as an ability.
+stat.shar.shieldreceive-description = Receive force shield to near units.\n[red]doesn't be saved in save file[].\nforce shield will works as an ability.
 stat.shar.fireforce-name = Force Construction
 stat.shar.fireforce-description = fire construction that has force shield, slow regenerate.\ncan destroyed by segment.
 stat.shar.fireassault-name = Assault Construction
-stat.shar.fireassault-description = fire construction that fire incendiary bullet,rotates 360 degrees and fires everywhere.\ncan destroyed by segment.
+stat.shar.fireassault-description = fire construction that fire incendiary bullet,\nrotates 360 degrees and fires everywhere.\ncan destroyed by segment.
 
 bar.attribute = {1} Attribute: + {0}%
 bar.drillspeeditem = {1} Speed: {0}/{2}s
