--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -55,6 +55,8 @@ stat.shar.overfreezing-name = Over Freezing Field
 stat.shar.overfreezing-description = deploy over freezing field
 stat.shar.burstamount = [lightgray]Bullet Amount:[] {0}
 stat.shar.fieldstatus = [lightgray]Field Status:[]
+stat.shar.receiveRange = [lightgray]Receive Range:[] {0}
+stat.shar.constructamount = [lightgray]Construction Amount:[] {0}
 stat.shar.shieldreceive-name = Shield Receive Field
 stat.shar.shieldreceive-description = Receive force shield to near units.\n[red]doesn't be saved in save file[].\nforce shield will works as an ability.
 stat.shar.fireforce-name = Force Construction
