--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,3 +1,7 @@
+block.shar-variable-processor.name = Accel Processor
+block.shar-variable-processor.description = The processor that can accel instructions per tick, support ~ x2000.
+block.shar-variable-processor.details = h
+
 block.shar-balkan.name = Balkan
 block.shar-balkan.description = An experimental prototype turret for firing various bullets. Has skills that trigger every few shots.
 block.shar-balkan.details =
@@ -36,6 +40,14 @@ block.shar-armedNucleus.details = no more flare rush
 block.shar-armedFoundation.name = Armed Foundation
 block.shar-armedFoundation.description = A Core Foundation armed with 4 laser bolt turrets and a repair point. Needs power input to fire.\n[red]Requires placement on a smaller core.[]
 block.shar-armedFoundation.details = heal go brr
+
+unit.shar-momo.name = Momo
+unit.shar-momo.description =
+unit.shar-momo.details = 
+unit.shar-monopoly.name = Monopoly
+unit.shar-monopoly.description =
+unit.shar-monopoly.details =
+
 
 status.shar-over-freezing.name = Over Freezing
 
