--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -33,7 +33,9 @@ block.shar-clinicus.details = sprite by MasterNo2, bullet sprite by ssim!
 block.shar-asclepius.name = Asclepius
 block.shar-asclepius.description = A stronger repair multi turret. Shoots burst laser bolts, heal artillery, support bullets, and has a repair point.. Has skills the trigger every few shots.
 block.shar-asclepius.details = sprite by MasterNo2, bullet sprite by ssim!
-
+block.shar-fossor.name = Fossor
+block.shar-fossor.description = A mass/mine multi turret. Shoots special construct. \ncannot link to mass driver. only can link to another multi turret that has mass mount.
+block.shar-fossor.details = Fos-sor. Fos-or. Fos or Pos. Possor... what
 block.shar-armedNucleus.name = Armed Nucleus
 block.shar-armedNucleus.description = A Core Nuclues armed with 4 hails and 4 laser turrets. Needs ammo and power input to fire.\n[red]Requires placement on a smaller core.[]
 block.shar-armedNucleus.details = no more flare rush
@@ -48,8 +50,9 @@ unit.shar-monopoly.name = Monopoly
 unit.shar-monopoly.description =
 unit.shar-monopoly.details =
 
-
 status.shar-over-freezing.name = Over Freezing
+status.shar-over-freezing.description = A status mixed with Shocked and Freezing. randomly lightning is created on units.\nonly for overFreezing field
+status.shar-over-freezing.details = sprite by sk!
 
 stat.shar.base-t = Base Turret
 stat.shar.mini-t = Mounted Turrets
