updated scroll bar

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -85,3 +85,5 @@ bar.shield = Shield
 bar.shar-reload = Reload: {0}%
 bar.shar-charge = Charge: {0}%
 bar.shar-skillReload = Skill Count: 
+
+ui.itemnotfound = [red]not found []
