--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -87,3 +87,6 @@ bar.shar-charge = Charge: {0}%
 bar.shar-skillReload = Skill Count: 
 
 ui.itemnotfound = [red]not found []
+
+shar-stat.health = Health: {0}
+shar-stat.shield = Shield: {0}
