--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -90,3 +90,4 @@ ui.itemnotfound = [red]not found []
 
 shar-stat.health = Health: {0}
 shar-stat.shield = Shield: {0}
+shar-stat.payloadCapacity = Payloads: {0} / {1}
