idk if java has \n but i guess i find out today

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,19 +3,19 @@ block.shar-variable-processor.description = The processor that can accel instruc
 block.shar-variable-processor.details = h
 
 block.shar-balkan.name = Balkan
-block.shar-balkan.description = An experimental prototype turret for firing various bullets. Has skills that trigger every few shots.
-block.shar-balkan.details =
-block.shar-adapt-drill.name = Adapt Drill
+block.shar-balkan.description = An experimental turret for firing various bullets. Has skills that trigger every few shots.
+block.shar-balkan.details = any problem can be solved by shooting more bullets
+block.shar-adapt-drill.name = Adaptive Drill
 block.shar-adapt-drill.description = Attribute selective drill that boosts efficiency with various Attribute types.
 block.shar-adapt-drill.details = The production time is relatively short, so the quality is lower than other contents.
 block.shar-multi-drill.name = Multi Drill
 block.shar-multi-drill.description = A drill than mines all materials under it at once.
-block.shar-multi-drill.details = A work that has been repeatedly added and deleted with many help, ideas, and functions. Helpers: mal and sk and qmel.
+block.shar-multi-drill.details = Lots of work has gone into this. \n help, ideas, and functions from mal, sk, and qmel.
 block.shar-shield-wall.name = Shield Wall
-block.shar-shield-wall.description = A wall with a shield that begins regenerating after not taking damage in a short period of time.
+block.shar-shield-wall.description = A wall with a small force shield that regens after awhile.
 block.shar-shield-wall.details = Mixed with zerg lava.
 block.shar-multi-crafterator.name = Multi Crafterator
-block.shar-multi-crafterator.description = The choose-able recipes crafter-generator block.
+block.shar-multi-crafterator.description = a crafter capable of generating its own power.
 block.shar-multi-crafterator.details = the multi craft + generator from multi lib by younggam.
 
 block.shar-multi-i.name = Aggregate
