--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ task buildDex dependsOn "build", "dexify"
 task buildMove(dependsOn: build) {
     doLast {
         copy {
-            from "build/libs/sharustry.jar"
+            from "build/libs/raw-sharustry.jar"
             into System.getenv("destination")
         }
     }
