v137 migration: fixed turret stats layout

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -82,7 +82,7 @@ stat.shar.fireassault.description = fire construction that fire incendiary bulle
 bar.attribute = {1} Attribute: + {0}%
 bar.drillspeeditem = {1} Speed: {0}/{2}s
 bar.shield = Shield
-bar.shar-reloadCounter = Reload: {0}%
+bar.shar-reload = Reload: {0}%
 bar.shar-charge = Charge: {0}%
 bar.shar-skillReload = Skill Count: 
 
