--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,6 +3,9 @@ name: Java CI with Gradle
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -23,12 +26,16 @@ jobs:
       - name: Add Android SDK to PATH
         run: echo "${ANDROID_HOME}/build-tools/29.0.3" >> $GITHUB_PATH
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew buildDex
+      - name: Grant execute permissions
+        run: |
+          chmod +x gradlew
+          chmod +x alpha-bleed
+          chmod +x alpha-bleeding-linux.exe
 
-      - name: Upload a Build Artifact (dexed)
+      - name: Build with Gradle
+        run: ./gradlew alphableed buildDex
+
+      - name: Upload Build Artifact
         uses: actions/upload-artifact@v2.2.1
         with:
           name: sharustry built by action
