--- a/build.gradle
+++ b/build.gradle
@@ -1,85 +1,81 @@
-plugins {
-    id 'java'
+apply plugin: "java"
+
+sourceSets {
+    main.java.srcDir("src/")
+    main.resources.srcDir("assets/")
 }
 
-ext{
-    sdkRoot = System.getenv("ANDROID_HOME")
-    sdkVersion = '30'
-    artifactFilename = "Sharustry.jar"
+ext {
+    mindustryVersion = 'v146'
+    artifactFilename = "Sharustry"
+    sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
 }
 
-group "sharlotte"
-
-sourceSets.main {
-    java.srcDir("src/")
-    resources.srcDir("assets/")
+java {
+    targetCompatibility = 8
+    sourceCompatibility = JavaVersion.VERSION_17
 }
 
 repositories {
     mavenCentral()
+    maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
     maven { url "https://jitpack.io" }
 }
 
 dependencies {
+    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+
     annotationProcessor 'com.github.Anuken:jabel:0.8.0'
-    compileOnly "com.github.Anuken.Mindustry:core:v138"
-    compileOnly "com.github.Anuken.Arc:flabel:v138"
-    compileOnly "com.github.Anuken.Arc:arc-core:v138"
 }
 
-jar.archiveFileName.set("raw-$artifactFilename")
+jar {
+    archiveFileName = "${artifactFilename}Desktop.jar"
 
-def isWindows = System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("windows")
-
-task dexify(type: Jar){
-    archiveFileName.set(artifactFilename)
-
-    final File jarArtifact = new File(tasks.jar.archiveFile.get().asFile.parent, "raw-$artifactFilename"),
-               dexedArtifact = new File(tasks.dexify.getTemporaryDir(), "dexed.jar")
-
-    doFirst{
-        //collect dependencies needed for desugaring
-        def files = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File("$sdkRoot/platforms/android-$sdkVersion/android.jar")])
-
-        exec{
-            workingDir dexedArtifact.parent
-            def command = ["d8", "--min-api", "14"]
-            for(def file : files){
-                command += "--classpath"
-                command += file.path
-            }
-
-            command += ["--output", dexedArtifact, jarArtifact]
-
-            if(isWindows){
-                commandLine("cmd", "/c", *command)
-            }else{
-                commandLine(*command)
-            }
-        }
+    from{
+        configurations.runtimeClasspath.collect{ it.isDirectory() ? it : zipTree(it) }
     }
-
-    from(zipTree(jarArtifact), zipTree(dexedArtifact))
 }
 
-task buildDex dependsOn "build", "dexify"
+tasks.register('jarAndroid', Jar) {
+    dependsOn "jar"
 
-task buildMove(dependsOn: build) {
-    doLast {
-        copy {
-            from "build/libs/raw-Sharustry.jar"
-            into System.getenv("destination")
+    doLast{
+        if(!sdkRoot || !new File(sdkRoot.toString()).exists()) throw new GradleException("No valid Android SDK found. Ensure that ANDROID_HOME is set to your Android SDK directory.")
+
+        def platformRoot = new File("$sdkRoot/platforms/").listFiles().sort().reverse().find{ f -> new File(f, "android.jar").exists()}
+
+        if(!platformRoot) throw new GradleException("No android.jar found. Ensure that you have an Android platform installed.")
+
+        //collect dependencies needed for de-sugaring
+        def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")
+
+        //dex and desugar files - this requires d8 in your PATH
+        "d8 $dependencies --min-api 14 --output ${artifactFilename}Android.jar ${artifactFilename}Desktop.jar"
+                .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
+    }
+}
+
+tasks.register('deploy', Jar) {
+    dependsOn "jarAndroid"
+    dependsOn "jar"
+
+    archiveFileName.set("${artifactFilename}.jar")
+
+    from{ [zipTree("$buildDir/libs/${artifactFilename}Desktop.jar"), zipTree("$buildDir/libs/${artifactFilename}Android.jar")] }
+
+    doLast{
+        delete{
+            delete "$buildDir/libs/${artifactFilename}Desktop.jar"
+            delete "$buildDir/libs/${artifactFilename}Android.jar"
         }
     }
 }
 
-tasks.withType(JavaCompile){
-    targetCompatibility = 8
-    sourceCompatibility = JavaVersion.VERSION_17
+tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
-    options.compilerArgs += ["-Xlint:deprecation"]
-    if(JavaVersion.current() != JavaVersion.VERSION_1_8){
+    options.compilerArgs += ["-Xlint:all"]
+    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
         options.compilerArgs.addAll(['--release', '8'])
     }
-    compileJava.options.fork = true
 }
